# AI-Coach-vibe-coding

./: .continue-here.md  .gitignore  .tmp-chatgpt-content.txt  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json  (+3 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 089e4862b719_add_skill_source_materials_junction_.py  10e15911bf3a_add_phase2_models_hcp_scenario_session_.py  13f6d6c40295_add_conference_fields.py  16f9f0ba6e9d_add_scoring_rubrics_table.py  2e84ae1adc8d_add_skill_tables.py  35e15f5ae427_add_service_config_table.py  50811ca8b0f6_add_meta_skills_table.py  8c0939755337_create_users_table.py  960bc2f081dd_add_skill_version_id_to_scenarios.py  a1b2c3d4e5f6_add_session_mode.py  b148c6bf1d9b_add_training_material_tables.py  b820e86271f8_add_default_project_to_service_configs.py  d8179cc74fe2_drop_material_chunks_table.py  df6cb9a8d3c1_add_skill_audit_trail_to_coaching_.py  e8cd533abc43_add_business_unit_to_users.py  f09a_unified_ai_foundry_config.py  g11a_add_agent_fields_to_hcp_profile.py  h12a_add_agent_version_to_hcp_profile.py  i12b_add_voice_avatar_fields_to_hcp_profile.py  j13a_add_voice_live_enabled_to_hcp_profile.py  k14a_add_voice_live_model_to_hcp_profile.py  l15a_add_performance_indexes.py  m16a_create_voice_live_instances.py  n17a_add_foundry_playground_fields.py  o18a_rename_vl_model_instruction.py  p19a_add_hcp_knowledge_configs.py
backend/app/: config.py  database.py  dependencies.py  main.py  startup_seed.py
backend/app/api/: __init__.py  admin_users.py  analytics.py  auth.py  azure_config.py  conference.py  config.py  hcp_profiles.py  health.py  knowledge_base.py  materials.py  meta_skills.py  rubrics.py  scenarios.py  scoring.py  sessions.py  skills.py  speech.py  voice_live.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: __init__.py  base.py  conference.py  hcp_knowledge_config.py  hcp_profile.py  material.py  message.py  meta_skill.py  scenario.py  score.py  scoring_rubric.py  service_config.py  session.py  skill.py  user.py  voice_live_instance.py
backend/scripts/: init_db.py  seed_data.py  seed_materials.py  seed_phase2.py  seed_skills.py
backend/tests/: conftest.py  test_adapters.py  test_adapters_new.py  test_agent_chat_service.py  test_agent_sync_service.py  test_analytics.py  test_analytics_service.py  test_api_direct.py  test_auth.py  test_azure_avatar_adapter.py  test_azure_config_api.py  test_azure_config_api_extended.py  test_azure_integration.py  test_azure_openai_adapter.py  test_base_adapters.py  test_conference_api.py  test_conference_api_stream.py  test_conference_api_unit.py  test_conference_models.py  test_conference_save_message.py  test_conference_schemas.py  test_conference_service.py  test_config_api.py  test_config_service.py  test_connection_tester_ext.py  test_connection_tester_extended.py  test_coverage_boost.py  test_coverage_boost_2.py  test_coverage_gaps.py  test_dependencies.py  test_encryption.py  test_exceptions.py  test_export_service.py  test_full_stack.py  test_hcp_agent_live_integration.py  test_hcp_agent_sync_integration.py  test_hcp_profile_service.py  test_hcp_profile_voice.py  test_hcp_profiles_api.py  test_hcp_test_chat.py  (+64 more)
(+1447 files in other folders)
